Проект снова не реактивный